--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10628,12 +10628,17 @@ form a {
   background: #f4f5f7;
 }
 
-.privacy-direct-messaging-item-1:nth-child(1) {
+.privacy-circle {
   height: 20px;
   width: 20px;
   border-radius: 50%;
   background: #3490dc;
   border: 2px solid #333;
+}
+
+.privacy-icon {
+  height: 24px;
+  width: 24px;
 }
 
 @media only screen and (max-width: 600px) {
