--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -103,12 +103,17 @@
     background: $profile-sidebar-light-bg;
 }
 
-.privacy-direct-messaging-item-1:nth-child(1) {
+.privacy-circle {
     height: 20px;
     width: 20px;
     border-radius: 50%;
     background: $blue;
     border: 2px solid #333;
+}
+
+.privacy-icon {
+    height: 24px;
+    width: 24px;
 }
 
 @media only screen and (max-width: 600px) {
